<resources>
    <string name="app_name">Twisted Entertainment (P4)</string>
    <string name="brand_name">Twisted Entertainment</string>
    <string name="welcome">Welcome</string>
    <string name="ask_us">Ask Us</string>
    <string name="login">Login</string>
    <string name="my_account">My Account</string>
    <string name="welcome_intro1">Welcome to <b>Twisted Entertainment</b>. We\'re here to help you!</string>
    <string name="welcome_intro2">If you don\'t have an account, just tell us your name and click on <b>Ask Us</b>.</string>
    <string name="welcome_intro3">If you already have an account, and would like to use it, click on <b>My Account</b>.</string>
    <string name="login_intro">Log in to your account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userId">User id</string>
    <string name="password">Password</string>
    <string name="lpNotificationChannel">Live Person Notification Channel</string>
    <string name="said">_said:</string>
    <string name="youHave">You also have_</string>
    <string name="unreadMessage">_other unread message</string>
    <string name="unreadMessages">_other unread messages</string>
    <string name="no">_no_</string>
</resources>
