<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".WelcomeActivity"
    tools:showIn="@layout/activity_welcome">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/welcome_intro1"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/welcome_intro2"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/firstNameLabel"
        android:labelFor="@id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/firstName"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        />

    <TextView
        android:id="@+id/lastNameLabel"
        android:labelFor="@id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:text="@string/lastName"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        />

    <Button
        android:id="@+id/ask_us_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/ask_us" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/welcome_intro3"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/my_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/my_account" />

</LinearLayout>