<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/login_intro"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/userIdLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/userId"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textEmailAddress"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:text="@string/password"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="24sp"
        android:text="@string/login" />

</LinearLayout>